force-app/main/default/objects/ST_Exhibition_Standard_Price__c/ST_Exhibition_Standard_Price__c.object-meta.xml
<CustomObject>
    <label>Exhibition Standard Price</label>
    <nameField>
        <label>Exhibition Standard Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Standard Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>