force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/Max_Slab_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Slab_Rate__c</fullName>
    <label>Max Slab Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>