force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Activation_Date__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>