force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Exhibition__c.field-meta.xml
<CustomField>
    <fullName>ST_Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>ST_Exhibition__c</referenceTo>
    <relationshipLabel>Exhibition Standard Prices</relationshipLabel>
    <relationshipName>Exhibition_Standard_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>