force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Inactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>ST_Inactivation_Date__c</fullName>
    <label>Inactivation Date</label>
    <type>Date</type>
</CustomField>