force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Liability_Coverage__c.field-meta.xml
<CustomField>
    <fullName>ST_Liability_Coverage__c</fullName>
    <label>Liability Coverage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>