force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Product__c.field-meta.xml
<CustomField>
    <fullName>ST_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Exhibition Standard Prices</relationshipLabel>
    <relationshipName>Exhibition_Standard_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>