force-app/main/default/objects/ST_Exhibition_Standard_Price__c/fields/ST_Rate_UOM__c.field-meta.xml
<CustomField>
    <fullName>ST_Rate_UOM__c</fullName>
    <label>Rate UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Per Gram</fullName>
            </value>
            <value>
                <fullName>Per Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>